# ak47-ide

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs
src/components/Editor/: CodeEditor.tsx
src/components/Loading/: LoadingScreen.tsx
src/components/Minimap/: Minimap.tsx  index.ts
src/components/Search/: SearchPanel.tsx
src/components/Settings/: Settings.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/Tabs/: TabBar.tsx
src/components/Terminal/: Terminal.tsx
src/components/ThemeSelector/: ThemeSelector.tsx
src/components/Toast/: ToastContainer.tsx
src/components/Welcome/: WelcomeScreen.tsx
src/stores/: editorStore.ts  settingsStore.ts  themeStore.ts
src/themes/: index.ts
src/types/: index.ts
src/utils/: helpers.ts  themeGenerator.ts
